--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -61,7 +61,6 @@
 <!ENTITY Ctr_emptytfavico_n	"None">
 <!ENTITY Ctr_emptytfavico_g	"Generic">
 <!ENTITY Ctr_noemptypticon	"Odebrat prázdnou faviconu z připnutého panelu">
-<!ENTITY Ctr_e10stab_notd	"E10s tabs: zrušit podtržení">
 <!ENTITY Ctr_closetab_0		"Zavřít panel">
 <!ENTITY Ctr_closetab_1		"Pouze na aktivním panelu">
 <!ENTITY Ctr_closetab_2		"Nikde">
@@ -129,6 +128,7 @@
 <!ENTITY Ctr_options_rem	"Pamatovat poslední zvolenou kategorii">
 <!ENTITY Ctr_svgfilters		"SVG barvy pro defaultní ikony tlačítek lišty">
 <!ENTITY Ctr_wincontrols	"Přesunutelné ovládací prvky okna v režimu celé obrazovky">
+<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domain' obrázků: klasický vzhled">
 <!ENTITY Ctr_altalertbox	"'Alert box': alternativní vzhled">
 <!ENTITY Ctr_emptygfavico	"Replace generic favicon">
