--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -61,7 +61,6 @@
 <!ENTITY Ctr_emptytfavico_n	"None">
 <!ENTITY Ctr_emptytfavico_g	"Generic">
 <!ENTITY Ctr_noemptypticon	"Fjern tomme favicon fra fastgjorte faneblade">
-<!ENTITY Ctr_e10stab_notd	"E10s faneblade: fjern understregning">
 <!ENTITY Ctr_closetab_0		"Lukning af faneblad">
 <!ENTITY Ctr_closetab_1		"Kun på aktive faneblade">
 <!ENTITY Ctr_closetab_2		"Ingen steder">
@@ -129,6 +128,7 @@
 <!ENTITY Ctr_options_rem	"Husk seneste valgte kategori">
 <!ENTITY Ctr_svgfilters		"SVG-farver til standard værktøjslinje knap ikoner">
 <!ENTITY Ctr_wincontrols	"Flytbar fuldskærmsvindue kontrolelementer">
+<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domæne'-billeder: klassisk udseende">
 <!ENTITY Ctr_altalertbox	"'Alert-boks': alternativt udseende">
 <!ENTITY Ctr_emptygfavico	"Replace generic favicon">
