--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -61,7 +61,6 @@
 <!ENTITY Ctr_emptytfavico_n	"Žeden">
 <!ENTITY Ctr_emptytfavico_g	"Powšykny">
 <!ENTITY Ctr_noemptypticon	"Prozny faworitowy symbol z pśipětego rejtarka">
-<!ENTITY Ctr_e10stab_notd	"Rejtarki e10s: Pódsmužku wótpóraś">
 <!ENTITY Ctr_closetab_0		"Rejtark zacyniś">
 <!ENTITY Ctr_closetab_1		"Jano na aktiwnem rejtarku">
 <!ENTITY Ctr_closetab_2		"Niźi">
@@ -129,6 +128,7 @@
 <!ENTITY Ctr_options_rem	"Kategoriju se spomnjeś, kótaraž jo se ako slědna wubrała">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
 <!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
+<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
 <!ENTITY Ctr_oldtoplevimg	"Wobraze 'nejwušeje domeny': Klasiski wenkowny naglěd">
 <!ENTITY Ctr_altalertbox	"'Warnowański kašćik': Alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_emptygfavico	"Powšykny fawority symbol wuměniś">
