--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -61,7 +61,6 @@
 <!ENTITY Ctr_emptytfavico_n	"Pole">
 <!ENTITY Ctr_emptytfavico_g	"Üldine">
 <!ENTITY Ctr_noemptypticon	"Eemalda püsikaartidelt tühjad lehe ikoonid">
-<!ENTITY Ctr_e10stab_notd	"E10s kaardid: eemalda allajoonimine">
 <!ENTITY Ctr_closetab_0		"Kaardi sulgemise nupp">
 <!ENTITY Ctr_closetab_1		"Ainult aktiivsel kaardil">
 <!ENTITY Ctr_closetab_2		"Ei kuskil">
@@ -129,6 +128,7 @@
 <!ENTITY Ctr_options_rem	"Jäta meelde viimati valitud kategooria">
 <!ENTITY Ctr_svgfilters		"Kasuta vaikimisi tööriistariba nuppude jaoks SVG-värve">
 <!ENTITY Ctr_wincontrols	"Liigutatavad akna juhtelemendid täisekraani režiimis">
+<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
 <!ENTITY Ctr_oldtoplevimg	"'Tippdomeeni' pildid: klassikaline välimus">
 <!ENTITY Ctr_altalertbox	"'Teavituskast': alternatiivne välimus">
 <!ENTITY Ctr_emptygfavico	"Asenda üldine lehe ikoon">
