--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -61,7 +61,6 @@
 <!ENTITY Ctr_emptytfavico_n	"Non">
 <!ENTITY Ctr_emptytfavico_g	"Générique">
 <!ENTITY Ctr_noemptypticon	"Enlever les favicons vides des onglets épinglés">
-<!ENTITY Ctr_e10stab_notd	"Onglets E10s : enlever le soulignage">
 <!ENTITY Ctr_closetab_0		"Bouton de fermeture">
 <!ENTITY Ctr_closetab_1		"Onglet actif uniquement">
 <!ENTITY Ctr_closetab_2		"Aucun">
@@ -129,6 +128,7 @@
 <!ENTITY Ctr_options_rem	"Se souvenir de la dernière catégorie sélectionnée">
 <!ENTITY Ctr_svgfilters		"Couleurs SVG pour les icônes par défaut de la barre d'outils">
 <!ENTITY Ctr_wincontrols	"Plein écran : boutons déplaçables">
+<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
 <!ENTITY Ctr_oldtoplevimg	"Images du 'domaine de 1er niveau' : appearance classique">
 <!ENTITY Ctr_altalertbox	"« Boîte d'alerte »: appearance alternative">
 <!ENTITY Ctr_emptygfavico	"Replace generic favicon">
