--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -128,7 +128,7 @@
 <!ENTITY Ctr_options_rem	"Jäta meelde viimati valitud kategooria">
 <!ENTITY Ctr_svgfilters		"Kasuta vaikimisi tööriistariba nuppude jaoks SVG-värve">
 <!ENTITY Ctr_wincontrols	"Liigutatavad akna juhtelemendid täisekraani režiimis">
-<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
+<!ENTITY Ctr_html5warning	"HTML5 täisekraani hoiatus">
 <!ENTITY Ctr_oldtoplevimg	"'Tippdomeeni' pildid: klassikaline välimus">
 <!ENTITY Ctr_altalertbox	"'Teavituskast': alternatiivne välimus">
 <!ENTITY Ctr_emptygfavico	"Asenda üldine lehe ikoon">
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_urlbardropm	"Liiguta rippmenüü avamise nupp võimalikult lõppu">
 <!ENTITY Ctr_urlbardropm2	"Tee rippmenüü avamise nupp alati nähtavaks">
 <!ENTITY Ctr_altreaderico	"Alternatiivsed 'Lugemisvaate' ikoonid">
-<!ENTITY Ctr_altautocompl	"Alternative 'autocomplete popup' (experimental)">
+<!ENTITY Ctr_altautocompl	"Alternatiivne aadressiriba automaatlõpetamise hüpik (katsejärgus)">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
 <!ENTITY Ctr_urlbar_uc		"Keela ühendatud automaatlõpetamise funktsioon 'Unified autocomplete' (about:config eelistus)">
 <!ENTITY Ctr_locsearchbw10	"Vähenda aadressiriba ja otsinguriba kõrgust (katsejärgus)">
