--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -128,7 +128,7 @@
 <!ENTITY Ctr_options_rem	"记住最后选中的分类">
 <!ENTITY Ctr_svgfilters		"默认工具栏图标使用的SVG颜色">
 <!ENTITY Ctr_wincontrols	"全屏窗口控制按钮可以移动">
-<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
+<!ENTITY Ctr_html5warning	"HTML5 全屏警告">
 <!ENTITY Ctr_oldtoplevimg	"“顶级域名”图片: 经典外观">
 <!ENTITY Ctr_altalertbox	"“提示框”: 备选的外观">
 <!ENTITY Ctr_emptygfavico	"替换通用网站图标">
@@ -223,7 +223,7 @@
 <!ENTITY Ctr_ntabhov		"悬停新标签页">
 <!ENTITY Ctr_bold			"加粗">
 <!ENTITY Ctr_italic			"斜体">
-<!ENTITY Ctr_notabhov		"启用设置覆盖‘悬停’设置">
+<!ENTITY Ctr_notabhov		"启用设置覆盖“悬停”设置">
 <!ENTITY Ctr_tabc_act_tb	"工具栏使用背景色">
 
 <!ENTITY Ctr_urlbar			"地址栏">
