--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -56,7 +56,7 @@
 <!ENTITY Ctr_tabwidthinfo3	"¡Los valores por debajo de 48px causarán problemas en la mayoría de los casos!">
 <!ENTITY Ctr_square_edges	"Esquinas superiores cuadradas">
 <!ENTITY Ctr_tttitlebar		"Título de pestaña en la barra de título de &brandShortName;">
-<!ENTITY Ctr_tabinsertion	"Insertar pestaña asociada tras la actual (... >> browser.tabs.insertRelatedAfterCurrent)">
+<!ENTITY Ctr_tabinsertion	"Insertar pestaña asociada tras actual (about:config >> browser.tabs.insertRelatedAfterCurrent)">
 <!ENTITY Ctr_emptytfavico	"Mostrar favicon (si un sitio no ofrece uno)">
 <!ENTITY Ctr_emptytfavico_n	"Ninguno">
 <!ENTITY Ctr_emptytfavico_g	"Genérico">
@@ -128,7 +128,7 @@
 <!ENTITY Ctr_options_rem	"Recordar última categoría seleccionada">
 <!ENTITY Ctr_svgfilters		"Colores SVG para iconos predeterminados de botones de barra de herramientas">
 <!ENTITY Ctr_wincontrols	"Controles de ventana móviles en pantalla completa">
-<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
+<!ENTITY Ctr_html5warning	"Advertencia de pantalla completa de HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Imágenes del 'dominio de primer nivel': Apariencia clásica">
 <!ENTITY Ctr_altalertbox	"'Recuadro de alerta': Apariencia alternativa">
 <!ENTITY Ctr_emptygfavico	"Reemplazar favicon genérico">
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_urlbardropm	"Mover flecha de despliegue a la última posición posible">
 <!ENTITY Ctr_urlbardropm2	"Hacer siempre visible la flecha de despliegue">
 <!ENTITY Ctr_altreaderico	"Iconos de 'Vista de lectura' alternativos">
-<!ENTITY Ctr_altautocompl	"Alternative 'autocomplete popup' (experimental)">
+<!ENTITY Ctr_altautocompl	"'Menú emergente de autocompletado' alternativo (experimental)">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
 <!ENTITY Ctr_urlbar_uc		"Deshabilitar 'Autocompletado unificado' (about:config >> browser.urlbar.unifiedcomplete)">
 <!ENTITY Ctr_locsearchbw10	"Reducir altura de la barra de direcciones y la barra de búsqueda (experimental)">
@@ -326,7 +326,7 @@
 <!ENTITY Ctr_tabanimation	"De la apertura/cierre de pestañas (about:config >> browser.tabs.animate)">
 <!ENTITY Ctr_dlanimation	"De las notificaciones de descarga (about:config >> browser.download.animateNotifications)">
 <!ENTITY Ctr_fsanimation	"De pantalla completa (about:config >> browser.fullscreen.animate)">
-<!ENTITY Ctr_fsaduration	"De pantalla comp. reproductor HTML5 (about:config >> full-screen-api.transition-duration.*)">
+<!ENTITY Ctr_fsaduration	"De pantalla completa de contenido HTML5 (about:config >> full-screen-api.transition-duration.*)">
 
 <!ENTITY Ctr_toolsitem		"Elemento en el menú Herramientas">
 <!ENTITY Ctr_appmenuitem	"Elemento en el menú de la aplicación">
@@ -340,7 +340,7 @@
 <!ENTITY Ctr_experttweaks	"Avanzadas">
 <!ENTITY Ctr_fx34search		"Desmarcar esto retira la 'nueva apariencia de búsqueda' y recupera la antigua.">
 <!ENTITY Ctr_fx34loop		"Desmarcar esto retira las características de 'llamada y conversación' (Hello).">
-<!ENTITY Ctr_fx35devtheme	"Desmarcar esto deshabilita el 'tema decorativo de desarrollador'.">
+<!ENTITY Ctr_fx35devtheme	"Desmarcar esto deshabilita el tema decorativo 'Developer Edition'.">
 <!ENTITY Ctr_fx36prefs		"Desmarcar esto restaura la antigua ventana de Opciones en lugar de la actual pestaña.">
 <!ENTITY Ctr_fx36prefs2		"¡La ventana antigua no contiene todas las preferencias del navegador añadidas recientemente!">
 <!ENTITY Ctr_fx38reader		"Desmarcar esto deshabilita la 'vista de lectura' y elimina su icono de la barra de direcciones.">
@@ -348,7 +348,7 @@
 <!ENTITY Ctr_fx38pocket2	"Hacerlo con el botón 'Pocket' en 'Personalizar' elimina sus menús en marcadores y vista de lectura.">
 <!ENTITY Ctr_e_searchui		"Aspecto de la barra de búsqueda">
 <!ENTITY Ctr_e_loop			"Llamada y conversación / Loop">
-<!ENTITY Ctr_e_deved		"Tema decorativo de la edición de desarrollador">
+<!ENTITY Ctr_e_deved		"Tema decorativo 'Developer Edition'">
 <!ENTITY Ctr_e_prefsui		"Preferencias en pestaña">
 <!ENTITY Ctr_e_readermode	"Modo de vista de lectura">
 <!ENTITY Ctr_e_pocket		"Pocket">
