--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -128,7 +128,7 @@
 <!ENTITY Ctr_options_rem	"Pamiętaj ostatnio wybraną kategorię">
 <!ENTITY Ctr_svgfilters		"Kolory SVG ikon przycisków domyślnego paska narzędzi">
 <!ENTITY Ctr_wincontrols	"Ruchome kontrolki okna pełnego ekranu">
-<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
+<!ENTITY Ctr_html5warning	"Ostrzeżenie o pełnym ekranie HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Obrazy 'domeny najwyższego poziomu': klasyczny wygląd">
 <!ENTITY Ctr_altalertbox	"'Pole powiadomień': alternatywny wygląd">
 <!ENTITY Ctr_emptygfavico	"Zamień standardową ikonę ulubionych">
