--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -128,7 +128,7 @@
 <!ENTITY Ctr_options_rem	"Kategoriju sej spomjatkować, kotraž je so jako poslednja wubrała">
 <!ENTITY Ctr_svgfilters		"SVG-barby za symbole standardnych tłóčatkow">
 <!ENTITY Ctr_wincontrols	"Přesuwajomne wodźenske elementy połneje wobrazowki">
-<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
+<!ENTITY Ctr_html5warning	"Warnowanje połneje wobrazowki HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Wobrazy 'najwyšeje domeny': Klasiski zwonkowny napohlad">
 <!ENTITY Ctr_altalertbox	"'Warnowanski kašćik': Alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_emptygfavico	"Powšitkowny faworitowy symbol wuměnić">
@@ -174,7 +174,7 @@
 <!ENTITY Ctr_am_buticons	"Lisćiny přidatkow: Popisy tłóčatko přez symbole wuměnić">
 <!ENTITY Ctr_am_hovshowb	"Lisćiny přidatkow: Tłóčatka jenož při 'hover' pokazać">
 <!ENTITY Ctr_addonversion	"Lisćiny přidatkow: Wersiju přidatka pokazać">
-<!ENTITY Ctr_xpinstallui	"Stary přidatkowe instalowanske wokno (nastajenje about:config)">
+<!ENTITY Ctr_xpinstallui	"Stare přidatkowe instalowanske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłóčatko menija zapołožkow">
 <!ENTITY Ctr_hiderecentbm	"Wuskakowace wokno zapołožkow: Njedawo přidate zapołožki schować">
 <!ENTITY Ctr_hideeditbm		"Hwěžka zapołožkow: Wuskakowace wokno schować (jeli strona jako zapołožka składowana njeje)">
@@ -237,7 +237,7 @@
 <!ENTITY Ctr_urlbardropm	"Tłóčatko šipkoweho kónčka do poslednjeje móžneje pozicije přesunyć">
 <!ENTITY Ctr_urlbardropm2	"Tłóčatko šipkoweho kónčka přeco pokazać">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'čitakowe' symbole">
-<!ENTITY Ctr_altautocompl	"Alternative 'autocomplete popup' (experimental)">
+<!ENTITY Ctr_altautocompl	"Alternatiwne wuskakowace wokno 'awtowudospołnjenje' (eksperimentelne)">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić (nastajenje about:config)">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
